@@ -1372,17 +1372,6 @@
       </component>
     </version>
   </module>
-  <module name="gnome-print-admin">
-    <version release="gnome-1.4">
-      <component name="gnome-print-admin" dir="gnome-print-admin" group="extras">
-	<podir dir="po"/>
-	<potname name="gnome-print-admin.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-  </module>
   <module name="gnome-session">
     <version release="gnome-2.2">
       <component name="gnome-session" dir="gnome-session" group="desktop">
@@ -1425,7 +1414,7 @@
   </module>
   <module name="gnome-system-tools">
     <version release="gnome-2.4">
-      <component name="gnome-system-tools" dir="gnome-system-tools" group="extras">
+      <component name="gnome-system-tools" dir="gnome-system-tools" group="fifth-toe">
         <podir dir="po"/>
         <potname name="gnome-system-tools.pot"/>
         <branch name="HEAD"/>
