@@ -1,3 +1,9 @@
+2003-06-05  Abel Cheung  <maddog@linux.org.hk>
+
+	* translation-status.xml: gnome-system-tools is in fifth-toe now.
+	  Remove gnome-print-admin entirely, since its functionality has
+	  already been mereged into gnome-print during GNOME 1.4 days.
+
 2003-05-30  Abel Cheung  <maddog@linux.org.hk>
 
 	* translation-status.xml: Changed gedit-plugins pot name.
